sa o iau de pe net

--- a/KendoUIMvcApplication/Views/Shared/_Layout.cshtml
+++ b/KendoUIMvcApplication/Views/Shared/_Layout.cshtml
@@ -7,8 +7,7 @@
 	<link href="@Url.Content("~/Content/kendo/2014.1.318/kendo.default.min.css")" rel="stylesheet" type="text/css" />
 	<script src="@Url.Content("~/Scripts/kendo/2014.1.318/jquery.min.js")"></script>
     <script src="@Url.Content("~/Scripts/kendo/2014.1.318/kendo.web.min.js")"></script>
-	@*<script src="@Url.Content("~/Scripts/kendo/2012.3.1114/kendo.all.min.js")"></script>*@
-	<script src="@Url.Content("~/Scripts/kendo/2012.3.1114/kendo.aspnetmvc.min.js")"></script>
+	<script src="@Url.Content("http://cdn.kendostatic.com/2012.3.1114/js/kendo.aspnetmvc.min.js")"></script>
 </head>
 
 <body>
