--- a/KendoUIMvcApplication/Views/Home/Index.cshtml
+++ b/KendoUIMvcApplication/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 <h2>@ViewBag.Message</h2>
 
-@(Html.Kendo().Grid<KendoUIMvcApplication.Product>()
+@(Html.Kendo().Grid<Northwind.Product>()
       .Name("Grid")
       .Columns(columns =>
       {
