--- a/KendoUIMvcApplication/Views/Shared/_Layout.cshtml
+++ b/KendoUIMvcApplication/Views/Shared/_Layout.cshtml
@@ -2,13 +2,18 @@
 <html>
 <head>
 	<title>@ViewBag.Title</title>
-    <link href="http://cdn.kendostatic.com/2013.3.1119/styles/kendo.common.min.css" rel="stylesheet">
-    <link href="http://cdn.kendostatic.com/2013.3.1119/styles/kendo.default.min.css" rel="stylesheet">
-    <script src="http://cdn.kendostatic.com/2014.1.318/js/jquery.min.js"></script>
-    <script src="http://cdn.kendostatic.com/2014.1.318/js/kendo.web.min.js"></script>
+	<link href="http://cdn.kendostatic.com/2013.3.1119/styles/kendo.common.min.css" rel="stylesheet">
+	<link href="http://cdn.kendostatic.com/2013.3.1119/styles/kendo.default.min.css" rel="stylesheet">
+	<script src="http://cdn.kendostatic.com/2014.1.318/js/jquery.min.js"></script>
+	<script src="http://cdn.kendostatic.com/2014.1.318/js/kendo.web.min.js"></script>
 	<script src="http://cdn.kendostatic.com/2012.3.1114/js/kendo.aspnetmvc.min.js"></script>
 </head>
-
+@*<script>
+    $.ajax("/api/Product?sort=&page=1&pageSize=10", {
+        //ifModified: true,
+        success: function (data) { alert("Load was performed."); }
+        });
+</script>*@
 <body>
 	<div class="page">
 		<header>
